--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -37,3 +37,24 @@ nav, p, section, article {
     text-decoration: none;
 }
 
+.hero {
+    position: relative;
+}
+
+.hero img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+h1 {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    padding: 16px;
+    text-align: center;
+    opacity: 0.7;
+    background-color: var(--accent1-color);
+    color: #fff;
+}
+
