--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -58,3 +58,16 @@ h1 {
     color: #fff;
 }
 
+.hero article {
+    position: absolute;
+    opacity: 0.7;
+    background-color: var(--accent2-color);
+    color: #fff;
+}
+
+.hero article img {
+    float: right;
+    width: 125px;
+    border: 2px;
+}
+
