--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 .hero article {
-    position: absolute;
+    /* position: absolute;*/
     opacity: 0.7;
     background-color: var(--accent2-color);
     color: #fff;
