--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,22 @@
-main {
+header,.grid, main, footer {
     max-width: 840px;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
+}
+
+aside {
+    width: 20rem;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside {
@@ -34,14 +51,26 @@ footer {
 
 
 h1 {
+    border-bottom: 1px;
     color: beige;
     font-style: italic;
 }
 
 nav {
-    color: green;
-    padding: 2px;
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+nav a {
     display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
 }
 
 main img {
