--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -51,6 +51,23 @@ nav, p, section, article {
     height: auto;
 }
 
+.navigation {
+    display: flex;
+    list-style: none;
+}
+
+.navigation li {
+    flex: 1 1 auto;
+}
+
+.navigation a {
+    display: block;
+    color: navy;
+    padding: 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
 h1 {
     position: absolute;
     top: 20px;
