--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -41,6 +41,15 @@ nav, p, section, article {
     width: 50px;
 }
 
+header {
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: 120px 1fr 1fr;
+    align-items: center;
+    border-bottom: 1px solid white;
+    max-width: 1000px;
+}
+
 .hero {
     position: relative;
 }
