--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -54,11 +54,13 @@ header {
     position: relative;
 }
 
-.hero img {
-    display: block;
-    width: 100%;
+.hero section img {
+    margin: 0 0.25rem 0 1rem;
+    width: 64px;
     height: auto;
 }
+
+
 
 .navigation {
     display: flex;
@@ -88,14 +90,14 @@ h1 {
     color: #fff;
 }
 
-.hero article {
+.hero section article {
     /* position: absolute;*/
     opacity: 0.7;
     background-color: var(--accent2-color);
     color: #fff;
 }
 
-.hero article img {
+.hero section article img {
     float: right;
     width: 125px;
     border: 2px;
