--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -49,7 +49,7 @@ header .logo img {
     list-style-type: none;
     display: flex;
     gap: 20px;
-    box-shadow: 3px;
+    border: 3px;
 }
 
 .navigation li {
