--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -103,7 +103,7 @@ header .logo img {
 
 /* Adventure Styling */
 .adventure {
-    background-color: #fff;
+    background-color: beige;
     padding: 40px 20px;
     text-align: center;
 }
