--- a/wwr/styles/information.css
+++ b/wwr/styles/information.css
@@ -79,6 +79,13 @@ header .logo img {
     background-color: beige;
     padding: 40px 20px;
     text-align: center;
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .employee { 
