--- a/wwr/styles/information.css
+++ b/wwr/styles/information.css
@@ -83,7 +83,7 @@ header .logo img {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
+    /*gap: 20px; */
     max-width: 1200px;
     margin: 0 auto;
 }
